@@ -1,7 +1,8 @@
 1.8.9 (29.11.2017):
 
 * Rename preference "Open scan dialog at program start"
-  -> "Open scan dialog at program start"
+  -> "Open scanner at program start"
+* Fix killing processes on cancel
 
 
 1.8.8 (29.10.2017):
